svg to item-1, fix mobile alignment

--- a/style.css
+++ b/style.css
@@ -5,22 +5,19 @@
   --box-shadow: 20px 10px 20px rgb(206, 209, 190);
 }
 
-html {
+html, body {
   width: 100vw;
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
   font-family: Barlow Semi Condensed, sans-serif;
   background-color: rgb(231, 238, 235);
-}
-
-body {
-  width: 100%;
 }
 
 .grid-box {
   width: 1110px;
   height: 570px;
   justify-content: center;
-  align-content: center;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
@@ -33,6 +30,14 @@ body {
   grid-column-end: 3;
   background-color: hsl(263, 55%, 52%);
   color: hsl(210, 46%, 95%);
+  position: relative;
+}
+
+.quote-svg {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-right: 75px;
 }
 
 .grid-item-2 {
@@ -118,14 +123,15 @@ p {
 
 @media (max-width: 800px) {
   body {
-    width: 100vw;
+    width: auto;
     height: auto;
   }
 
   .main-flexbox {
-    justify-content: center;
-    margin-top: 0;
-    width: 90%;
+    justify-items: center;
+    align-items: center;
+    margin-top: 10px;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -136,8 +142,8 @@ p {
   }
 
   .grid-item {
-    width: 90%;
-    margin: 10px 5px;
+    width: 80%;
+    margin: 5px 5px;
   }
 
   .attribution {
